Replaced Character, Byte and Short constructor calls.