@@ -196,7 +196,7 @@ public class JSONArray {
                 case ']':
                 case ')':
                     if (q != c) {
-                        throw x.syntaxError("Expected a '" + new Character(q) + "'");
+                        throw x.syntaxError("Expected a '" + Character.valueOf(q) + "'");
                     }
                     return;
                 default:
